test/Fail/Issue2132.err
Issue2132.agda:23.8-12: error: [UnequalTerms]
The terms
  C′
and
  c
are not equal at type D
when checking that the expression refl has type C′ ≡ c
